force-app/main/default/objects/CARE_CC_Batch_Detail__c/CARE_CC_Batch_Detail__c.object-meta.xml
<CustomObject>
    <description>CARE CC Batch Detail</description>
    <label>CARE CC Batch Detail</label>
    <nameField>
        <displayFormat>CCD{0000000000}</displayFormat>
        <label>Name(Sequence No)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE CC Batch Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>