force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/APPLICATION__c.field-meta.xml
<CustomField>
    <fullName>APPLICATION__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>APPLICATION</label>
    <referenceTo>CARE_Application__c</referenceTo>
    <relationshipLabel>CARE CC Batch Detail</relationshipLabel>
    <relationshipName>CARE_CC_Batch_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>