force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/Application_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Record_Type_Name__c</fullName>
    <formula>APPLICATION__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Record Type Name</label>
    <type>Text</type>
</CustomField>