force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/CARE_APP_ENROLLED_SA__c.field-meta.xml
<CustomField>
    <fullName>CARE_APP_ENROLLED_SA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CARE APP ENROLLED SA</label>
    <referenceTo>CARE_App_Enrolled_SA__c</referenceTo>
    <relationshipLabel>CARE CC Batch Detail</relationshipLabel>
    <relationshipName>CARE_CC_Batch_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>