force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/CARE_BATCH_UPLOAD_DETAIL__c.field-meta.xml
<CustomField>
    <fullName>CARE_BATCH_UPLOAD_DETAIL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CARE BATCH UPLOAD DETAIL</label>
    <referenceTo>CARE_Batch_Upload_Detail__c</referenceTo>
    <relationshipLabel>CARE CC Batch Detail</relationshipLabel>
    <relationshipName>CARE_CC_Batch_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>