force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/CARE_CC_Batch__c.field-meta.xml
<CustomField>
    <fullName>CARE_CC_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CARE CC Batch</label>
    <referenceTo>CARE_CC_Batch__c</referenceTo>
    <relationshipLabel>CARE CC Batch Detail</relationshipLabel>
    <relationshipName>CARE_CC_Batch_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>