force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/CARE_CI_CC__c.field-meta.xml
<CustomField>
    <fullName>CARE_CI_CC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CARE CI CC</label>
    <referenceTo>CARE_CI_CC__c</referenceTo>
    <relationshipLabel>CARE CC Batch Detail</relationshipLabel>
    <relationshipName>CARE_CC_Batch_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>