force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/CC_CL_CD__c.field-meta.xml
<CustomField>
    <fullName>CC_CL_CD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CC CL CD</label>
    <length>10</length>
    <type>Text</type>
</CustomField>