force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/CC_DETAIL_NO__c.field-meta.xml
<CustomField>
    <fullName>CC_DETAIL_NO__c</fullName>
    <displayFormat>CCDX{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>CC DETAIL NO</label>
    <type>AutoNumber</type>
</CustomField>