force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/CC_TYPE_CD2__c.field-meta.xml
<CustomField>
    <fullName>CC_TYPE_CD2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CC TYPE CD2</label>
    <length>12</length>
    <type>Text</type>
</CustomField>