force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/CCB_Contact_Type_No2__c.field-meta.xml
<CustomField>
    <fullName>CCB_Contact_Type_No2__c</fullName>
    <description>Use the value in CARE_application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CCB Contact Type No2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>