force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/DATE1__c.field-meta.xml
<CustomField>
    <fullName>DATE1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DATE1</label>
    <type>Date</type>
</CustomField>