force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/DATE2__c.field-meta.xml
<CustomField>
    <fullName>DATE2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DATE2</label>
    <type>Date</type>
</CustomField>