force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/DATE3__c.field-meta.xml
<CustomField>
    <fullName>DATE3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DATE3</label>
    <type>Date</type>
</CustomField>