force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/DESCR254__c.field-meta.xml
<CustomField>
    <fullName>DESCR254__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DESCR254</label>
    <length>254</length>
    <type>Text</type>
</CustomField>