force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/DETAIL_STATUS_CODE__c.field-meta.xml
<CustomField>
    <fullName>DETAIL_STATUS_CODE__c</fullName>
    <label>DETAIL STATUS CODE</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DupSameDay</fullName>
            </value>
            <value>
                <fullName>No End Date</fullName>
            </value>
            <value>
                <fullName>No SA ID</fullName>
            </value>
            <value>
                <fullName>Validate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>