force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/EXTERNAL_ID__c.field-meta.xml
<CustomField>
    <fullName>EXTERNAL_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EXTERNAL ID</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>