force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/Initial_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Initial_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>First time enrolling in the program</description>
    <label>Initial Enrollment</label>
    <type>Checkbox</type>
</CustomField>