force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/IS_CARE_DELETE__c.field-meta.xml
<CustomField>
    <fullName>IS_CARE_DELETE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IS CARE DELETE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>