force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/SERVICE_TYPE_CODE__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_TYPE_CODE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SERVICE TYPE CODE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>