force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/SOURCE_CHANNEL_TYPE__c.field-meta.xml
<CustomField>
    <fullName>SOURCE_CHANNEL_TYPE__c</fullName>
    <label>SOURCE CHANNEL TYPE</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REACH</fullName>
            </value>
            <value>
                <fullName>LIHEAP</fullName>
            </value>
            <value>
                <fullName>ESA</fullName>
            </value>
            <value>
                <fullName>CARE</fullName>
            </value>
            <value>
                <fullName>AUTO TRANSFER</fullName>
            </value>
            <value>
                <fullName>AUTO EXTENSION</fullName>
            </value>
            <value>
                <fullName>NP Related CC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>