force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/SOURCE_DETAIL_NO__c.field-meta.xml
<CustomField>
    <fullName>SOURCE_DETAIL_NO__c</fullName>
    <label>SOURCE DETAIL NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>