force-app/main/default/objects/CARE_CC_Batch_Detail__c/fields/USER_ID_CARE1__c.field-meta.xml
<CustomField>
    <fullName>USER_ID_CARE1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>USER ID CARE1</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>