force-app/main/default/objects/CARE_CC_Batch_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>APPLICATION__c</columns>
    <columns>CARE_CC_Batch__c</columns>
    <columns>CARE_CI_CC__c</columns>
    <columns>CC_CL_CD__c</columns>
    <columns>CC_DETAIL_NO__c</columns>
    <columns>CC_DTTM__c</columns>
    <columns>CC_TYPE_CD__c</columns>
    <columns>CCB_Contact_Type_No__c</columns>
    <columns>DESCR254__c</columns>
    <columns>SA_ID__c</columns>
    <columns>SERVICE_TYPE_CODE__c</columns>
    <columns>SOURCE_CHANNEL_TYPE__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>